fix, feat: Fix of the 'buscador' id font-color, making it visible.
fix --> Fix of the visible font in the 'search' (buscador id) input.
feat --> Little increase in the size of the 'buscador's font size

--- a/css/main.css
+++ b/css/main.css
@@ -101,6 +101,8 @@ ul {
 .contenido-hero form #buscador {
     height: 50px;
     margin-bottom: 0;
+    color: #2c2c2cdc;
+    font-size: 23px;
 }
 
 .contenido-hero form .submit-buscador {
